fixed link overlap and font

--- a/day-22-github-repo-search/scss/_body.scss
+++ b/day-22-github-repo-search/scss/_body.scss
@@ -33,6 +33,8 @@ li{
   width: 22%;
   margin-left: 8%;
   margin-bottom: 25px;
+  text-align: center;
+  height: 500px;
 }
 
 img{
@@ -44,7 +46,15 @@ img{
 a{
   font-size: 20px;
   margin-top: 10px;
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  font-family: sans-serif;
+  color: black;
+  font-weight: bold;
+
 }
+
 
 .counter{
   float:right;
